<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MauMau</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_">Activity</string>
    <string name="own_cards">Your Cards</string>
    <string name="played_cards">Played Cards</string>
    <string name="start">Start</string>
    <string name="draw_card">Draw Card</string>
    <string name="next_turn">Next Turn</string>
    <string name="wish_suit">Wish Your Suit</string>

</resources>